--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-socket.io": "^7.6.11",
     "@nestjs/websockets": "^7.6.10",
     "ngx-socket-io": "^3.2.0",
     "reflect-metadata": "^0.1.13",
