--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/platform-socket.io": "^7.6.11",
     "@nestjs/websockets": "^7.6.10",
+    "bootstrap": "^5.0.0-beta1",
     "ngx-socket-io": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
