--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - /data/postgres:/data/postgres
-    env_file:
-      - docker.env
-    networks:
-      - postgres
-
-  pgadmin:
-    links:
-      - postgres:postgres
-    container_name: pgadmin
-    image: dpage/pgadmin4
-    ports:
-      - "8080:80"
-    volumes:
-      - /data/pgadmin:/root/.pgadmin
+      - /data/postgres:/var/lib/postgresql/data
     env_file:
       - docker.env
     networks:
