--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/platform-socket.io": "^7.6.6",
     "@nestjs/websockets": "^7.6.6",
+    "@types/hapi__joi": "^17.1.6",
     "bootstrap": "^5.0.0-beta1",
     "ngx-socket-io": "^3.2.0",
     "reflect-metadata": "^0.1.13",
