--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/platform-socket.io": "^7.6.6",
+    "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.6",
     "@types/hapi__joi": "^17.1.6",
     "bootstrap": "^5.0.0-beta1",
     "ngx-socket-io": "^3.2.0",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
